[project]
name = "claudepython"
version = "0.1.0"
description = "Python project with uv, Jupyter, and Claude Code in GitHub Codespaces"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2",
    "numpy>=2.0",
    "matplotlib>=3.9",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "pytest>=8.0",
    "ipykernel>=6.29",
]
